# parquet-ruby

./: .envrc  .gitignore  CHANGELOG.md  Gemfile  README.md  devenv.nix  devenv.yaml  flake.nix  overlay.nix  parquet.gemspec
.github/workflows/: gem-push.yml  ruby.yml
ext/parquet/: Cargo.toml
ext/parquet-core/: Cargo.toml
ext/parquet-core/src/: arrow_conversion.rs  error.rs  lib.rs  reader.rs  schema.rs  test_utils.rs  value.rs  writer.rs
ext/parquet-core/src/traits/: schema.rs
ext/parquet-core/tests/: arrow_conversion_tests.rs  binary_data.rs  column_projection.rs  complex_types.rs  compression_tests.rs  concurrent_access.rs  decimal_tests.rs  edge_cases_corner_cases.rs  error_handling_comprehensive_tests.rs  null_handling_tests.rs  primitive_types.rs  real_world_patterns.rs  review_regressions.rs  roundtrip_correctness.rs  schema_comprehensive_tests.rs  temporal_tests.rs  test_helpers.rs  writer_tests.rs
ext/parquet-ruby-adapter/: Cargo.toml
ext/parquet-ruby-adapter/src/: converter.rs  error.rs  lib.rs  logger.rs  metadata.rs  reader.rs  repack.rs  schema.rs  string_cache.rs  string_cache_test.rs  string_storage.rs  types.rs  utils.rs  writer.rs
ext/parquet/src/: adapter_ffi.rs  lib.rs
lib/: parquet.rbi
lib/parquet/: schema.rb  version.rb
test/: column_test.rb  complex_types_test.rb  decimal_test.rb  dynamic_batch_test.rb  error_test.rb  logger_test.rb  memory_usage_test.rb  repack_test.rb  schema_test.rb  string_cache_test.rb  string_storage_test.rb
