[package]
name = "parquet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "58.3.0"
arrow-array = "58.3.0"
arrow-buffer = "58.3.0"
arrow-schema = { version = "58.3.0", features = ["canonical_extension_types"] }
bytes = "1.5"
indexmap = "2.2"
jiff = "0.2"
num = "0.4.3"
ordered-float = "5.0.0"
parquet = { version = "58.3.0", features = ["arrow", "zstd", "lz4", "snap"] }
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
triomphe = "0.1.15"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
