[package]
name = "parquet-ruby-adapter"
version = "0.1.0"
edition = "2021"

[build-dependencies]
rb-sys-env = "^0.2"

[dependencies]
arrow-array = "58.3.0"
arrow-buffer = "58.3.0"
arrow-schema = "58.3.0"
bytes = "1.5"
magnus = { version = "0.8", features = ["rb-sys"] }
num = "0.4.3"
ordered-float = "5.0.0"
parquet = { version = "58.3.0", features = ["arrow"] }
parquet-core = { path = "../parquet-core" }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
tempfile = "^3.15"
thiserror = "2.0"
indexmap = "2.2"
triomphe = "0.1.15"
uuid = "*"
